# facialgen

./: README.md  coraml_experiment.ipynb  coraml_face_dataset_demo.ipynb  curvature_experiments.ipynb  gnp_genus_experiments.ipynb  plots.ipynb  pyproject.toml  requirements.txt  run_experiment.py  run_experiment_notebook.ipynb
facialgen/: __init__.py  curvature.py  data.py  early_stopping.py  evaluation.py  experiment.py  models.py  rotation_systems.py  sampling.py  train.py  types.py
facialgen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
