[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facialgen"
version = "0.1.0"
description = "Graph curvature and facial walk utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "transformers",
  "tqdm",
  "pandas",
  "matplotlib",
  "torch_geometric",
]

[tool.setuptools]
packages = ["facialgen"]
